strategic-deal-assurance/force-app/main/default/objects/Opportunity/fields/Approval_Reason__c.field-meta.xml
<CustomField>
    <fullName>Approval_Reason__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Approval Reason.</description>
    <length>32768</length>
    <type>LongTextArea</type>
    <label>Approval Reason</label>
</CustomField>