strategic-deal-assurance/force-app/main/default/objects/Opportunity/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Discount.</description>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
    <label>Discount</label>
</CustomField>