strategic-deal-assurance/force-app/main/default/objects/Opportunity/fields/Policy_Evaluated_At__c.field-meta.xml
<CustomField>
    <fullName>Policy_Evaluated_At__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Policy Evaluated At.</description>
    <type>DateTime</type>
    <label>Policy Evaluated At</label>
</CustomField>