strategic-deal-assurance/force-app/main/default/objects/Opportunity/fields/Policy_Rule_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Rule_Version__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Policy Rule Version.</description>
    <length>40</length>
    <type>Text</type>
    <label>Policy Rule Version</label>
</CustomField>