strategic-deal-assurance/force-app/main/default/objects/Opportunity/fields/Regional_VP_Approver__c.field-meta.xml
<CustomField>
    <fullName>Regional_VP_Approver__c</fullName>
    <description>BR-STRATEGIC-DISCOUNT: Regional VP Approver.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>User</referenceTo>
    <relationshipName>Strategic_Opportunities</relationshipName>
    <type>Lookup</type>
    <label>Regional VP Approver</label>
</CustomField>